align fixes and refactors albuns placeholders

--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -177,8 +177,17 @@
   .m-2 {
     margin: calc(var(--spacing) * 2);
   }
+  .m-20 {
+    margin: calc(var(--spacing) * 20);
+  }
+  .mx-2 {
+    margin-inline: calc(var(--spacing) * 2);
+  }
   .mx-3 {
     margin-inline: calc(var(--spacing) * 3);
+  }
+  .my-2 {
+    margin-block: calc(var(--spacing) * 2);
   }
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
@@ -228,11 +237,17 @@
   .min-h-screen {
     min-height: 100vh;
   }
+  .w-54 {
+    width: calc(var(--spacing) * 54);
+  }
   .w-64 {
     width: calc(var(--spacing) * 64);
   }
   .w-100 {
     width: calc(var(--spacing) * 100);
+  }
+  .w-full {
+    width: 100%;
   }
   .flex-1 {
     flex: 1;
@@ -264,11 +279,20 @@
   .justify-end {
     justify-content: flex-end;
   }
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
+  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
+  }
+  .gap-20 {
+    gap: calc(var(--spacing) * 20);
+  }
+  .gap-30 {
+    gap: calc(var(--spacing) * 30);
   }
   .space-y-4 {
     :where(& > :not(:last-child)) {
